revert to old POM version from springframeworkguru repo, because partial changes not work